<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_to_rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_for_btn_to_rulse"
        android:backgroundTint="#FFE500"
        android:textColor="#232323"
        />

    <TextView
        android:id="@+id/zagolovok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingVertical="50dp"
        android:text="@string/name_of_game"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/quastion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zagolovok"
        android:gravity="center_horizontal"
        android:paddingHorizontal="5dp"
        android:paddingBottom="20dp"
        android:paddingTop="50dp"
        android:text="@string/question_count_of_gamers"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/count_of_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/quastion"
        android:hint="@string/ET_count_of_gamers"
        android:inputType="number"
        android:paddingVertical="20dp" />

    <TextView
        android:id="@+id/quastion1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/count_of_players"
        android:text="@string/question_names_of_gamers"
        android:paddingHorizontal="5dp"
        android:gravity="center_horizontal"
        android:paddingVertical="20dp"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/names_of_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/quastion1"
        android:hint="@string/ET_names_of_gamers"
        android:paddingVertical="20dp" />
    <TextView
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/btn_to_start_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:paddingVertical="20dp"
        android:text="@string/go_to_play"
        android:backgroundTint="#FFE500"
        android:textColor="#232323"
        android:textSize="30sp"
        android:textStyle="bold" />
</RelativeLayout>